@@ -37,7 +37,7 @@ specSimC <- function(x, em) {
     .Call('RStoolbox_specSimC', PACKAGE = 'RStoolbox', x, em)
 }
 
-spectralIndicesCpp <- function(x, indices, redBand, blueBand, greenBand, nirBand, swir1Band, swir2Band, swir3Band, L, s, G, C1, C2, Levi, swir2ccc, swir2cdiff, sf) {
-    .Call('RStoolbox_spectralIndicesCpp', PACKAGE = 'RStoolbox', x, indices, redBand, blueBand, greenBand, nirBand, swir1Band, swir2Band, swir3Band, L, s, G, C1, C2, Levi, swir2ccc, swir2cdiff, sf)
+spectralIndicesCpp <- function(x, indices, redBand, blueBand, greenBand, nirBand, swir1Band, swir2Band, swir3Band, maskLayer, maskValue, L, s, G, C1, C2, Levi, swir2ccc, swir2cdiff, sf) {
+    .Call('RStoolbox_spectralIndicesCpp', PACKAGE = 'RStoolbox', x, indices, redBand, blueBand, greenBand, nirBand, swir1Band, swir2Band, swir3Band, maskLayer, maskValue, L, s, G, C1, C2, Levi, swir2ccc, swir2cdiff, sf)
 }
 
