@@ -121,8 +121,8 @@ BEGIN_RCPP
 END_RCPP
 }
 // spectralIndicesCpp
-NumericMatrix spectralIndicesCpp(NumericMatrix x, CharacterVector indices, const int redBand, const int blueBand, const int greenBand, const int nirBand, const int swir1Band, const int swir2Band, const int swir3Band, const double L, const double s, const double G, const double C1, const double C2, double Levi, const double swir2ccc, const double swir2cdiff, const double sf);
-RcppExport SEXP RStoolbox_spectralIndicesCpp(SEXP xSEXP, SEXP indicesSEXP, SEXP redBandSEXP, SEXP blueBandSEXP, SEXP greenBandSEXP, SEXP nirBandSEXP, SEXP swir1BandSEXP, SEXP swir2BandSEXP, SEXP swir3BandSEXP, SEXP LSEXP, SEXP sSEXP, SEXP GSEXP, SEXP C1SEXP, SEXP C2SEXP, SEXP LeviSEXP, SEXP swir2cccSEXP, SEXP swir2cdiffSEXP, SEXP sfSEXP) {
+NumericMatrix spectralIndicesCpp(NumericMatrix x, CharacterVector indices, const int redBand, const int blueBand, const int greenBand, const int nirBand, const int swir1Band, const int swir2Band, const int swir3Band, int maskLayer, const int maskValue, const double L, const double s, const double G, const double C1, const double C2, double Levi, const double swir2ccc, const double swir2cdiff, const double sf);
+RcppExport SEXP RStoolbox_spectralIndicesCpp(SEXP xSEXP, SEXP indicesSEXP, SEXP redBandSEXP, SEXP blueBandSEXP, SEXP greenBandSEXP, SEXP nirBandSEXP, SEXP swir1BandSEXP, SEXP swir2BandSEXP, SEXP swir3BandSEXP, SEXP maskLayerSEXP, SEXP maskValueSEXP, SEXP LSEXP, SEXP sSEXP, SEXP GSEXP, SEXP C1SEXP, SEXP C2SEXP, SEXP LeviSEXP, SEXP swir2cccSEXP, SEXP swir2cdiffSEXP, SEXP sfSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::RNGScope rcpp_rngScope_gen;
@@ -135,6 +135,8 @@ BEGIN_RCPP
     Rcpp::traits::input_parameter< const int >::type swir1Band(swir1BandSEXP);
     Rcpp::traits::input_parameter< const int >::type swir2Band(swir2BandSEXP);
     Rcpp::traits::input_parameter< const int >::type swir3Band(swir3BandSEXP);
+    Rcpp::traits::input_parameter< int >::type maskLayer(maskLayerSEXP);
+    Rcpp::traits::input_parameter< const int >::type maskValue(maskValueSEXP);
     Rcpp::traits::input_parameter< const double >::type L(LSEXP);
     Rcpp::traits::input_parameter< const double >::type s(sSEXP);
     Rcpp::traits::input_parameter< const double >::type G(GSEXP);
@@ -144,7 +146,7 @@ BEGIN_RCPP
     Rcpp::traits::input_parameter< const double >::type swir2ccc(swir2cccSEXP);
     Rcpp::traits::input_parameter< const double >::type swir2cdiff(swir2cdiffSEXP);
     Rcpp::traits::input_parameter< const double >::type sf(sfSEXP);
-    rcpp_result_gen = Rcpp::wrap(spectralIndicesCpp(x, indices, redBand, blueBand, greenBand, nirBand, swir1Band, swir2Band, swir3Band, L, s, G, C1, C2, Levi, swir2ccc, swir2cdiff, sf));
+    rcpp_result_gen = Rcpp::wrap(spectralIndicesCpp(x, indices, redBand, blueBand, greenBand, nirBand, swir1Band, swir2Band, swir3Band, maskLayer, maskValue, L, s, G, C1, C2, Levi, swir2ccc, swir2cdiff, sf));
     return rcpp_result_gen;
 END_RCPP
 }
